# output-suscription/api/openapi.yaml
@@ -66,7 +66,7 @@ paths:
       - suscription
       summary: Get user suscription info
       description: Returns the active suscription data
-      operationId: getAuthor
+      operationId: getSuscription
       parameters:
       - name: userId
         in: path
@@ -96,7 +96,7 @@ paths:
       - suscription
       summary: Update suscription data
       description: This can only be done by the logged in user.
-      operationId: updateAuthor
+      operationId: updateSuscription
       parameters:
       - name: userId
         in: path
@@ -145,121 +145,6 @@ paths:
       x-swagger-router-controller: Suscription
 components:
   schemas:
-    Genre:
-      type: string
-      description: Book genres enum
-      enum:
-      - Fantasy
-      - Sci-Fi
-      - Horror
-      - Adventure
-      - Mistery
-      - Romance
-      - History
-      - Drama
-      - Thriller
-      - Comedy
-      - Poetry
-    Book:
-      required:
-      - author
-      - bookId
-      - genre
-      - name
-      type: object
-      properties:
-        bookId:
-          type: integer
-          format: int64
-          example: 1
-        name:
-          type: string
-          example: Fire & Blood
-        author:
-          type: string
-          example: George R.R. Martin
-        genre:
-          $ref: '#/components/schemas/Genre'
-        ratings:
-          type: array
-          items:
-            $ref: '#/components/schemas/Book_ratings'
-        audiobook:
-          $ref: '#/components/schemas/Audiobook'
-        coverUrl:
-          type: string
-          example: https://upload.wikimedia.org/wikipedia/en/thumb/c/c2/Fire_%26_Blood_%282018%29_hardcover.jpg/220px-Fire_%26_Blood_%282018%29_hardcover.jpg
-        status:
-          type: string
-          description: book status in the app
-          enum:
-          - available
-          - updating
-          - unavailable
-      xml:
-        name: book
-    Audiobook:
-      required:
-      - status
-      type: object
-      properties:
-        link:
-          type: string
-          example: https://www.ivoox.com/fuego-sangre-1_md_32713232_1.mp3
-        narrator:
-          type: string
-          example: John Doe
-        duration:
-          type: integer
-          example: 247
-        status:
-          type: string
-          description: audiobook status in the app
-          enum:
-          - available
-          - unavailable
-      xml:
-        name: audiobook
-    Rating:
-      type: object
-      properties:
-        username:
-          type: string
-          example: John
-        comment:
-          type: string
-          example: I loved it!
-        rate:
-          maximum: 5
-          minimum: 1
-          type: number
-          example: 4.7
-      xml:
-        name: rating
-    User:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 1
-        username:
-          type: string
-          example: johndoe123
-        firstName:
-          type: string
-          example: John
-        lastName:
-          type: string
-          example: Doe
-        email:
-          type: string
-          example: johndoe@email.com
-        password:
-          type: string
-          example: "12345678"
-      xml:
-        name: user
     Suscription:
       type: object
       properties:
@@ -282,26 +167,4 @@ components:
         startDate: 16/11/2022
       xml:
         name: subcription
-    Book_ratings:
-      type: object
-      properties:
-        rating:
-          $ref: '#/components/schemas/Rating'
-  requestBodies:
-    Book:
-      description: Book object that needs to be added to the app
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Book'
-        application/xml:
-          schema:
-            $ref: '#/components/schemas/Book'
-    UserArray:
-      description: List of user object
-      content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/User'
+
